<resources>
    <string name="app_name">PracticalTest02</string>
    <string name="connect">connect</string>
    <string name="client">CLIENT</string>
    <string name="address">Address</string>
    <string name="client_port">Port</string>
    <string name="server">SERVER</string>
    <string name="server_port">Port</string>
    <string name="currency">Currency</string>
    <string name="get_rate">get rate</string>
</resources>